--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
          command: << parameters.test_command >>
     
   build_and_push_dev_image:
-    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    executor: circleci/aws-ecr@8.2.1 # use the aws-ecr/default executor to start the docker daemon
     steps:
       # Checkout your repository
       - checkout
@@ -157,44 +157,44 @@ jobs:
           repo: $ECR_REPOSITORY # this will use the env var
 
 
-  # build_image:
-  #   <<: *cloud_container
-  #   parameters:
-  #     env_name:
-  #       type: string
-  #   steps:
-  #     - checkout
+  build_image:
+    <<: *cloud_container
+    parameters:
+      env_name:
+        type: string
+    steps:
+      - checkout
 
-  #     - setup_remote_docker:
-  #         version: 20.10.11
-  #         docker_layer_caching: true
+      - setup_remote_docker:
+          version: 20.10.11
+          docker_layer_caching: true
 
-  #     - run:
-  #         name: build docker image
-  #         command: |
-  #           export BUILD_DATE=$(date -Is) >> $BASH_ENV
-  #           source $BASH_ENV
+      - run:
+          name: build docker image
+          command: |
+            export BUILD_DATE=$(date -Is) >> $BASH_ENV
+            source $BASH_ENV
 
-  #           docker build \
-  #             --label build.git.sha=${CIRCLE_SHA1} \
-  #             --label build.git.branch=${CIRCLE_BRANCH} \
-  #             --label build.date=${BUILD_DATE} \
-  #             --build-arg APP_BUILD_DATE=${BUILD_DATE} \
-  #             --build-arg APP_BUILD_TAG=${CIRCLE_BRANCH} \
-  #             --build-arg APP_GIT_COMMIT=${CIRCLE_SHA1} \
-  #             -t app .
+            docker build \
+              --label build.git.sha=${CIRCLE_SHA1} \
+              --label build.git.branch=${CIRCLE_BRANCH} \
+              --label build.date=${BUILD_DATE} \
+              --build-arg APP_BUILD_DATE=${BUILD_DATE} \
+              --build-arg APP_BUILD_TAG=${CIRCLE_BRANCH} \
+              --build-arg APP_GIT_COMMIT=${CIRCLE_SHA1} \
+              -t app .
 
-  #     - run:
-  #         name: push docker image
-  #         command: |
-  #           login="$(aws ecr get-login --region ${AWS_DEFAULT_REGION} --no-include-email)"
-  #           ${login}
+      - run:
+          name: push docker image
+          command: |
+            login="$(aws ecr get-login --region ${AWS_DEFAULT_REGION} --no-include-email)"
+            ${login}
 
-  #           docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
-  #           docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+            docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+            docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
 
-  #           docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:<< parameters.env_name >>.latest"
-  #           docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:<< parameters.env_name >>.latest"
+            docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:<< parameters.env_name >>.latest"
+            docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:<< parameters.env_name >>.latest"
  
   deploy_image_to_live:
     <<: *cloud_container
