--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,23 +84,25 @@ jobs:
          command: << parameters.test_command >>
     
   build_and_push_dev_image:
-    executor: circleci/aws-ecr@8.2.1 # use the aws-ecr/default executor to start the docker daemon
-    steps:
-      # Checkout your repository
-      - checkout
-      # Authenticate to AWS using OIDC v2 with the AWS CLI
-      - aws-cli/setup:
-          role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
-          region: $ECR_REGION # this will use the env var
-      # Authenticate to the ECR repository using the standard command
-      - run: |
-          aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
-      # Build and push your Docker image
-      - aws-ecr/build-image:
-          push-image: true
-          tag: ${CIRCLE_SHA1},dev.latest
-          region: $ECR_REGION # this will use the env var
-          repo: $ECR_REPOSITORY # this will use the env var
+    build:
+      machine:
+        image: ruby:3.3.4-alpine3.20
+      steps:
+        # Checkout your repository
+        - checkout
+        # Authenticate to AWS using OIDC v2 with the AWS CLI
+        - aws-cli/setup:
+            role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
+            region: $ECR_REGION # this will use the env var
+        # Authenticate to the ECR repository using the standard command
+        - run: |
+            aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
+        # Build and push your Docker image
+        - aws-ecr/build-image:
+            push-image: true
+            tag: ${CIRCLE_SHA1},dev.latest
+            region: $ECR_REGION # this will use the env var
+            repo: $ECR_REPOSITORY # this will use the env var
 
   deploy_image_to_dev:
     <<: *cloud_container
