--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
     
   build_and_push_dev_image:
     machine:
-      image: ruby:3.3.4-alpine3.20
+      image: cimg/ruby:3.3.4-browsers
     steps:
       # Checkout your repository
       - checkout
