--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
     
   build_and_push_dev_image:
     docker:
-      image: cimg/ruby:3.3.4-browsers
+      - image: cimg/ruby:3.3.4-browsers
     steps:
       # Checkout your repository
       - checkout
