Docker demon not running

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ jobs:
          command: << parameters.test_command >>
     
   build_and_push_dev_image:
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     docker:
       - image: cimg/ruby:3.3.4-browsers
     steps:
