--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,22 +83,54 @@ jobs:
          name: run tests
          command: << parameters.test_command >>
     
+  # build_and_push_dev_image:
+  #   executor: aws-ecr/default
+  #   steps:
+  #     - checkout
+  #     - aws-cli/setup:
+  #         role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
+  #         region: $ECR_REGION # this will use the env var
+  #     # Authenticate to the ECR repository using the standard command
+  #     - run: |
+  #         aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
+  #     # Build and push your Docker image
+  #     - aws-ecr/build-image:
+  #         push-image: true
+  #         tag: ${CIRCLE_SHA1},dev.latest
+  #         region: $ECR_REGION # this will use the env var
+  #         repo: $ECR_REPOSITORY # this will use the env var
+
   build_and_push_dev_image:
-    executor: aws-ecr/default
+    <<: *cloud_container
+    parameters:
+      env_name:
+        type: string
     steps:
       - checkout
-      - aws-cli/setup:
-          role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
-          region: $ECR_REGION # this will use the env var
-      # Authenticate to the ECR repository using the standard command
-      - run: |
-          aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
-      # Build and push your Docker image
-      - aws-ecr/build-image:
-          push-image: true
+
+      - setup_remote_docker:
+          version: 20.10.11
+          docker_layer_caching: true
+
+      - run:
+          name: build docker dev image
           tag: ${CIRCLE_SHA1},dev.latest
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY # this will use the env var
+
+          command: |
+            export BUILD_DATE=$(date -Is) >> $BASH_ENV
+            source $BASH_ENV
+
+            docker build \
+              --label build.git.sha=${CIRCLE_SHA1} \
+              --label build.git.branch=${CIRCLE_BRANCH} \
+              --label build.date=${BUILD_DATE} \
+              --build-arg APP_BUILD_DATE=${BUILD_DATE} \
+              --build-arg APP_BUILD_TAG=${CIRCLE_BRANCH} \
+              --build-arg APP_GIT_COMMIT=${CIRCLE_SHA1} \
+              -t app .
+
 
   deploy_image_to_dev:
     <<: *cloud_container
@@ -291,7 +323,7 @@ jobs:
 workflows:
   test-build-deploy:
     jobs:
-      - test
+      # - test
       ### dev ###
       - build_and_push_dev_image:
           name: build-dev
