--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ references:
 
 jobs:
   build_and_push_image:
-    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    docker:
+      - image: cimg/base:stabl
     steps:
       # Checkout your repository
       - checkout
