--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ references:
 jobs:
   build_and_push_image:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/ruby:3.3.4-browsers
     steps:
       # Checkout your repository
       - checkout
