--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,7 @@ references:
 
 jobs:
   build_and_push_image:
-    docker:
-      - image: cimg/ruby:3.3.4-browsers
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     steps:
       # Checkout your repository
       - checkout
