--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ references:
 
 jobs:
   build_and_push_image:
-    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    executor: circleci/aws-ecr@8.2.1  # use the aws-ecr/default executor to start the docker daemon
     steps:
       # Checkout your repository
       - checkout
