--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,73 @@ references:
           REPO_NAME: c100-application
 
 jobs:
+  test:
+    <<: *app_containers
+    parameters:
+      test_command:
+        type: string
+        default: bundle exec rake test:all_the_things
+    resource_class: medium+
+    steps:
+      - run: sudo apt-get update
+      - browser-tools/install-chrome:
+          chrome-version: 128.0.6613.114 # TODO: remove when chromedriver downloads are fixed
+#          replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+#      - run:
+#          name: Remove chromedriver license # prevents checkout
+#          command: |
+#            rm LICENSE.chromedriver
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1.1-dependencies-{{ checksum "Gemfile.lock" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1.1-dependencies-
+
+      - run:
+          name: install dependencies
+          command: |
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+            npm install
+
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: v1.1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      # Database setup
+      # - run: bundle exec rake db:create
+      # - run: bundle exec rake db:schema:load
+
+      # so mutant only runs on modified files; refer to mutant.rake for more details
+      - run: git remote set-branches origin master && git fetch
+
+      - run:
+         name: run tests
+         command: << parameters.test_command >>
+
+  # DEV image build
+  build_and_push_dev_image:
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    steps:
+      # Checkout your repository
+      - checkout
+      # Authenticate to AWS using OIDC v2 with the AWS CLI
+      - aws-cli/setup:
+          role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
+          region: $ECR_REGION # this will use the env var
+      # Authenticate to the ECR repository using the standard command
+      - run: |
+          aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
+      # Build and push your Docker image
+      - aws-ecr/build_image:
+          push_image: true
+          tag: ${CIRCLE_SHA1},dev.latest
+          region: $ECR_REGION # this will use the env var
+          repo: $ECR_REPOSITORY # this will use the env var
+
   build_and_push_image:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     steps:
@@ -49,9 +116,9 @@ jobs:
       - run: |
           aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
       # Build and push your Docker image
-      - aws-ecr/build-image:
-          push-image: true
-          tag: ${CIRCLE_SHA1},dev.latest
+      - aws-ecr/build_image:
+          push_image: true
+          tag: ${CIRCLE_SHA1},staging.latest
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY # this will use the env var
   build_image:
@@ -93,7 +160,6 @@ jobs:
             docker tag app "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:<< parameters.env_name >>.latest"
             docker push "${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:<< parameters.env_name >>.latest"
 
-
   deploy_image_to_live:
     <<: *cloud_container
     parameters:
@@ -105,11 +171,11 @@ jobs:
       - run:
           name: Authenticate to LIVE cluster
           command: |
-            echo -n ${KUBE_ENV_LIVE_DEV_CACERT} | base64 -d > ./ca.crt
-            kubectl config set-cluster ${KUBE_ENV_LIVE_DEV_NAME} --certificate-authority=./ca.crt --server=https://${KUBE_ENV_LIVE_DEV_NAME}
-            kubectl config set-credentials circleci --token=${KUBE_ENV_LIVE_DEV_TOKEN}
-            kubectl config set-context ${KUBE_ENV_LIVE_DEV_NAME} --cluster=${KUBE_ENV_LIVE_DEV_NAME} --user=circleci --namespace=${KUBE_ENV_LIVE_DEV_NAMESPACE}
-            kubectl config use-context ${KUBE_ENV_LIVE_DEV_NAME}
+            echo -n ${KUBE_ENV_LIVE_STAGING_CACERT} | base64 -d > ./ca.crt
+            kubectl config set-cluster ${KUBE_ENV_LIVE_STAGING_NAME} --certificate-authority=./ca.crt --server=https://${KUBE_ENV_LIVE_STAGING_NAME}
+            kubectl config set-credentials circleci --token=${KUBE_ENV_LIVE_STAGING_TOKEN}
+            kubectl config set-context ${KUBE_ENV_LIVE_STAGING_NAME} --cluster=${KUBE_ENV_LIVE_STAGING_NAME} --user=circleci --namespace=${KUBE_ENV_LIVE_STAGING_NAMESPACE}
+            kubectl config use-context ${KUBE_ENV_LIVE_STAGING_NAME}
 
       - deploy:
           name: rolling update image
@@ -129,14 +195,108 @@ jobs:
                     deployment/c100-application-deployment-<< parameters.env_name >> \
                     kubernetes.io/change-cause="${BUILD_DATE} set image ${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} via CircleCI"
 
+  deploy_image_to_live_prod:
+    <<: *cloud_container
+    parameters:
+      env_name:
+        type: string
+    steps:
+      - checkout
+
+      - run:
+          name: Authenticate to LIVE cluster
+          command: |
+            echo -n ${KUBE_ENV_LIVE_PRODUCTION_CACERT} | base64 -d > ./ca.crt
+            kubectl config set-cluster ${KUBE_ENV_LIVE_PRODUCTION_NAME} --certificate-authority=./ca.crt --server=https://${KUBE_ENV_LIVE_PRODUCTION_NAME}
+            kubectl config set-credentials circleci --token=${KUBE_ENV_LIVE_PRODUCTION_TOKEN}
+            kubectl config set-context ${KUBE_ENV_LIVE_PRODUCTION_NAME} --cluster=${KUBE_ENV_LIVE_PRODUCTION_NAME} --user=circleci --namespace=${KUBE_ENV_LIVE_PRODUCTION_NAMESPACE}
+            kubectl config use-context ${KUBE_ENV_LIVE_PRODUCTION_NAME}
+
+      - deploy:
+          name: rolling update image
+          command: |
+            export BUILD_DATE=$(date -Is) >> $BASH_ENV
+            source $BASH_ENV
+
+            kubectl set image -n c100-application-<< parameters.env_name >> \
+                    deployment/c100-application-deployment-<< parameters.env_name >> \
+                    webapp="${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+
+            kubectl set image -n c100-application-<< parameters.env_name >> \
+                    deployment/c100-application-sidekiq-<< parameters.env_name >> \
+                    sidekiq="${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+
+            kubectl annotate -n c100-application-<< parameters.env_name >> \
+                    deployment/c100-application-deployment-<< parameters.env_name >> \
+                    kubernetes.io/change-cause="${BUILD_DATE} set image ${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} via CircleCI"
+  tag_production:
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    parameters:
+      env_name:
+        type: string
+    steps:
+      # Authenticate to AWS using OIDC v2 with the AWS CLI
+      - aws-cli/setup:
+          role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
+          region: $ECR_REGION # this will use the env var
+      # Authenticate to the ECR repository using the standard command
+      - run: |
+          aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
+      # Build and push your Docker image
+      - run:
+          name: promote staging image to production
+          command: |
+            docker pull "${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com/sustainingdevs/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+
+            docker tag "${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com/sustainingdevs/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}" \
+                       "${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com/sustainingdevs/${CIRCLE_PROJECT_REPONAME}:production.latest"
+
+            docker push "${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com/sustainingdevs/${CIRCLE_PROJECT_REPONAME}:production.latest"
+
 
 workflows:
   test-build-deploy:
     jobs:
-      - build_and_push_image:
+      - build_and_push_dev_image:
           name: build-dev
-      - deploy_image_to_live:
-          name: deploy-dev-live
-          env_name: development
+      ### staging ###
+      - build_and_push_image:
+          name: build-staging
           requires:
-            - build-dev
+            - test
+          filters:
+            branches:
+              only:
+                - /^master$/
+      - deploy_image_to_live:
+          name: deploy-staging-live
+          env_name: staging
+          requires:
+            - build-staging
+          filters:
+            branches:
+              only:
+                - /^master$/
+      ### production ###
+      - approve_production:
+          type: approval
+          requires:
+            - deploy-staging-live
+          filters:
+            branches:
+              only: master
+      - tag_production:
+          env_name: staging
+          requires:
+            - approve_production
+          filters:
+            branches:
+              only: master
+      - deploy_image_to_live_prod:
+          name: deploy-production-live
+          env_name: production
+          requires:
+            - tag_production
+          filters:
+            branches:
+              only: master
