--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,6 +260,7 @@ workflows:
       - build_and_push_dev_image:
           name: build-dev
       ### staging ###
+      - test
       - build_and_push_image:
           name: build-staging
           requires:
