--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,7 +101,7 @@ jobs:
           push_image: true
           tag: ${CIRCLE_SHA1},dev.latest
           region: $ECR_REGION # this will use the env var
-          repo: $ECR_REPOSITORY # this will use the env var
+          repo: $ECR_REPOSITORY_DEV # this will use the env var
 
   build_and_push_image:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
