--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - checkout
       # Authenticate to AWS using OIDC v2 with the AWS CLI
       - aws-cli/setup:
-          role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
+          role_arn: $ECR_ROLE_TO_ASSUME_DEV # this will use the env var
           region: $ECR_REGION # this will use the env var
       # Authenticate to the ECR repository using the standard command
       - run: |
