--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,7 @@ jobs:
           aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
       # Build and push your Docker image
       - aws-ecr/build_image:
+          account_id: $AWS_ECR_REGISTRY_ID
           push_image: true
           tag: ${CIRCLE_SHA1},staging.latest
           region: $ECR_REGION # this will use the env var
