--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,26 @@ jobs:
          name: run tests
          command: << parameters.test_command >>
     
+    # DEV image build
+  build_and_push_dev_image:
+    executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
+    steps:
+      # Checkout your repository
+      - checkout
+      # Authenticate to AWS using OIDC v2 with the AWS CLI
+      - aws-cli/setup:
+          role_arn: $ECR_ROLE_TO_ASSUME_DEV # this will use the env var
+          region: $ECR_REGION # this will use the env var
+      # Authenticate to the ECR repository using the standard command
+      - run: |
+          aws ecr get-login-password --region $ECR_REGION | docker login --username AWS --password-stdin ${AWS_ECR_REGISTRY_ID}.dkr.ecr.${ECR_REGION}.amazonaws.com
+      # Build and push your Docker image
+      - aws-ecr/build_image:
+          push_image: true
+          tag: ${CIRCLE_SHA1},dev.latest
+          region: $ECR_REGION # this will use the env var
+          repo: $ECR_REPOSITORY_DEV # this will use the env var
+
   build_and_push_image:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     steps:
@@ -238,45 +258,47 @@ jobs:
 workflows:
   test-build-deploy:
     jobs:
-      - test
-      ### staging ###
-      - build_and_push_image:
-          name: build-staging
-          requires:
-            - test
-          filters:
-            branches:
-              only:
-                - /^master$/
-      - deploy_image_to_live:
-          name: deploy-staging-live
-          env_name: staging
-          requires:
-            - build-staging
-          filters:
-            branches:
-              only:
-                - /^master$/
-      ### production ###
-      - approve_production:
-          type: approval
-          requires:
-            - deploy-staging-live
-          filters:
-            branches:
-              only: master
-      - tag_production:
-          env_name: staging
-          requires:
-            - approve_production
-          filters:
-            branches:
-              only: master
-      - deploy_image_to_live_prod:
-          name: deploy-production-live
-          env_name: production
-          requires:
-            - tag_production
-          filters:
-            branches:
-              only: master
+      - build_and_push_dev_image:
+          name: build-dev
+      # - test
+      # ### staging ###
+      # - build_and_push_image:
+      #     name: build-staging
+      #     requires:
+      #       - test
+      #     filters:
+      #       branches:
+      #         only:
+      #           - /^master$/
+      # - deploy_image_to_live:
+      #     name: deploy-staging-live
+      #     env_name: staging
+      #     requires:
+      #       - build-staging
+      #     filters:
+      #       branches:
+      #         only:
+      #           - /^master$/
+      # ### production ###
+      # - approve_production:
+      #     type: approval
+      #     requires:
+      #       - deploy-staging-live
+      #     filters:
+      #       branches:
+      #         only: master
+      # - tag_production:
+      #     env_name: staging
+      #     requires:
+      #       - approve_production
+      #     filters:
+      #       branches:
+      #         only: master
+      # - deploy_image_to_live_prod:
+      #     name: deploy-production-live
+      #     env_name: production
+      #     requires:
+      #       - tag_production
+      #     filters:
+      #       branches:
+      #         only: master
