--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,42 @@ jobs:
           region: $ECR_REGION # this will use the env var
           repo: $ECR_REPOSITORY_DEV # this will use the env var
 
+  deploy_image_to_dev:
+    <<: *cloud_container
+    parameters:
+      env_name:
+        type: string
+    steps:
+      - checkout
+
+      - run:
+          name: Authenticate to LIVE cluster
+          command: |
+            echo -n ${KUBE_ENV_LIVE_STAGING_CACERT} | base64 -d > ./ca.crt
+            kubectl config set-cluster ${KUBE_ENV_LIVE_DEV_NAME} --certificate-authority=./ca.crt --server=https://${KUBE_ENV_LIVE_DEV_NAME}
+            kubectl config set-credentials circleci --token=${KUBE_ENV_LIVE_DEV_TOKEN}
+            kubectl config set-context ${KUBE_ENV_LIVE_DEV_NAME} --cluster=${KUBE_ENV_LIVE_DEV_NAME} --user=circleci --namespace=${KUBE_ENV_LIVE_DEV_NAMESPACE}
+            kubectl config use-context ${KUBE_ENV_LIVE_DEV_NAME}
+
+      - deploy:
+          name: rolling update image
+          command: |
+            export BUILD_DATE=$(date -Is) >> $BASH_ENV
+            source $BASH_ENV
+
+            kubectl set image -n c100-application-<< parameters.env_name >> \
+                    deployment/c100-application-deployment-<< parameters.env_name >> \
+                    webapp="${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+
+            kubectl set image -n c100-application-<< parameters.env_name >> \
+                    deployment/c100-application-sidekiq-<< parameters.env_name >> \
+                    sidekiq="${ECR_ENDPOINT}/${GITHUB_TEAM_NAME_SLUG}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1}"
+
+            kubectl annotate -n c100-application-<< parameters.env_name >> \
+                    deployment/c100-application-deployment-<< parameters.env_name >> \
+                    kubernetes.io/change-cause="${BUILD_DATE} set image ${CIRCLE_PROJECT_REPONAME}:${CIRCLE_SHA1} via CircleCI"
+
+
   build_and_push_image:
     executor: aws-ecr/default # use the aws-ecr/default executor to start the docker daemon
     steps:
@@ -261,6 +297,12 @@ workflows:
     jobs:
       - build_and_push_dev_image:
           name: build-dev
+      - deploy_image_to_dev:
+          name: deploy-dev-live
+          env_name: staging
+
+
+
       # - test
       # ### staging ###
       # - build_and_push_image:
