--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "license": "MIT",
   "dependencies": {
     "govuk-frontend": "5.8.0",
-    "puppeteer": "23.10.4"
+    "puppeteer": "^23.10.4"
   }
 }
