--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
     - 'features/**/*'
     - 'spec/**/*'
     - 'vendor/**/*'
+    - 'config/routes.rb'
 
 
 ####################################
