--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ workflows:
           filters:
             branches:
               only:
-                - /^rst-7185-CPU-profiling$/
+                - /^RST-7181$/
       - deploy_image_to_dev:
           name: deploy-dev-live
           env_name: dev
@@ -313,7 +313,7 @@ workflows:
           filters:
             branches:
               only:
-                - /^rst-7185-CPU-profiling$/
+                - /^RST-7181$/
       ### staging ###
       - build_and_push_image:
           name: build-staging
