RST-7387a master to demo 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ workflows:
           filters:
             branches:
               only:
-                - /^master$/
+                - /^RST-7387a$/
       - deploy_image_to_dev:
           name: deploy-dev-live
           env_name: dev
