--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ plugins:
 AllCops:
   SuggestExtensions: false
   NewCops: disable
-  TargetRubyVersion: 3.4.2
+  TargetRubyVersion: 3.4.4
   Exclude:
     - './*'
     - 'db/**/*'
@@ -48,7 +48,7 @@ Style/SymbolArray:
 Layout/SpaceInsideHashLiteralBraces:
   Enabled: false
 
-Naming/PredicateName:
+Naming/PredicatePrefix:
   Enabled: false
 
 Style/MultilineIfModifier:
