Update CircleCI dev image build branch filter
- Change branch filter from RST-7480 to grover-refactor-test
- Enables dev image build and deployment for current branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ workflows:
           filters:
             branches:
               only:
-                - /^rst-7484-new-application-refactor$/
+                - /^grover-refactor-test$/
       - deploy_image_to_dev:
           name: deploy-dev-live
           env_name: dev
