--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ references:
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: c100-application-test
+          POSTGRES_HOST_AUTH_METHOD: trust
   cloud_container: &cloud_container
     docker:
       - image: ministryofjustice/cloud-platform-tools:1.24
@@ -68,8 +69,8 @@ jobs:
           key: v1.1-dependencies-{{ checksum "Gemfile.lock" }}
 
       # Database setup
-      # - run: bundle exec rake db:create
-      # - run: bundle exec rake db:schema:load
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
 
       # so mutant only runs on modified files; refer to mutant.rake for more details
       - run: git remote set-branches origin master && git fetch
